# Nemare

./: .gitignore  CMakeLists.txt  build.zig  sdl.zig
cmake/: base.cmake
src/: main.zig  nemare.c  utils.zig
